src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginVertWrap.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<WrapPanel
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  ItemHeight="150"
  ItemWidth="150"
  Background="yellow"
  Orientation="vertical"
  Margin="-200">

		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>
		<Button Content="Button"/>

	</WrapPanel>

</Grid>
